try the nastily work around icccm incompat
remove xcb-icccm files and patch it as optional requirement...

--- a/rpm/kde5-kwin.yaml
+++ b/rpm/kde5-kwin.yaml
@@ -12,6 +12,9 @@ SetupOptions : -q -n %{name}-%{version}/upstream
 Sources:
     - "%{name}-%{version}.tar.xz"
 
+Patches:
+    - "icccm-optional.diff"
+
 RpmLintIgnore:
     - devel-file-in-non-devel-package
     - no-changelogname-tag
