update file list

--- a/rpm/kde5-kwin.yaml
+++ b/rpm/kde5-kwin.yaml
@@ -84,7 +84,6 @@ Files:
     - "%{_kde5_libdir}/libkdecorations.so.*"
     - "%{_kde5_libdir}/libkwinxrenderutils.so.*"
     - "%{_kde5_libdir}/libkwineffects.so.*"
-    - "%{_kde5_libdir}/libkwinglutils.so.*"
     - "%{_kde5_libdir}/libkwin4_effect_builtins.so.*"
     - "%{_kde5_libdir}/plugins/*.so"
     - "%{_kde5_libdir}/plugins/kwin"
@@ -98,7 +97,7 @@ Files:
     - "%{_datadir}/kservicetypes5/*.desktop"
     - "%{_datadir}/knotifications5/kwin.notifyrc"
     - "%{_datadir}/config.kcfg/kwin.kcfg"
-    - "%{_datadir}/icons/oxygen/*/actions/*"
+    - "%{_datadir}/icons/oxygen/*"
     - "%{_kde5_sysconfdir}/xdg/*.knsrc"
 
 SubPackages:
@@ -118,7 +117,6 @@ SubPackages:
           - "%{_kde5_libdir}/libkdecorations.so"
           - "%{_kde5_libdir}/libkwinxrenderutils.so"
           - "%{_kde5_libdir}/libkwineffects.so"
-          - "%{_kde5_libdir}/libkwinglutils.so"
           - "%{_kde5_libdir}/libkwin4_effect_builtins.so"
           - "%{_kde5_includedir}/*.h"
     - Name: doc
