Install glesutils on arm, otherwise glutils
qtbase is now built with desktop GL on x86 and GLES on arm.

--- a/rpm/kde5-kwin.yaml
+++ b/rpm/kde5-kwin.yaml
@@ -81,7 +81,12 @@ Files:
     - "%{_kde5_libdir}/libkdecorations.so.*"
     - "%{_kde5_libdir}/libkwinxrenderutils.so.*"
     - "%{_kde5_libdir}/libkwineffects.so.*"
+    - "%ifarch %{arm}"
     - "%{_kde5_libdir}/libkwinglesutils.so.*"
+    - "%endif"
+    - "%ifarch %{ix86} x86_64"
+    - "%{_kde5_libdir}/libkwinglutils.so.*"
+    - "%endif"
     - "%{_kde5_libdir}/libkwin4_effect_builtins.so.*"
     - "%{_kde5_libdir}/plugins/*.so"
     - "%{_kde5_libdir}/plugins/kwin"
@@ -115,7 +120,12 @@ SubPackages:
           - "%{_kde5_libdir}/libkdecorations.so"
           - "%{_kde5_libdir}/libkwinxrenderutils.so"
           - "%{_kde5_libdir}/libkwineffects.so"
+          - "%ifarch %{arm}"
           - "%{_kde5_libdir}/libkwinglesutils.so"
+          - "%endif"
+          - "%ifarch %{ix86} x86_64"
+          - "%{_kde5_libdir}/libkwinglutils.so"
+          - "%endif"
           - "%{_kde5_libdir}/libkwin4_effect_builtins.so"
           - "%{_kde5_includedir}/*.h"
     - Name: doc
