--- a/rpm/kde5-kwin.yaml
+++ b/rpm/kde5-kwin.yaml
@@ -100,6 +100,7 @@ Files:
     - "%{_datadir}/kservicetypes5/*.desktop"
     - "%{_datadir}/knotifications5/kwin.notifyrc"
     - "%{_datadir}/config.kcfg/kwin.kcfg"
+    - "%{_datadir}/icons/hicolor/*"
     - "%{_kde5_sysconfdir}/xdg/*.knsrc"
 
 SubPackages:
