Add libkwin library

--- a/rpm/kwin.yaml
+++ b/rpm/kwin.yaml
@@ -80,10 +80,7 @@ Files:
     - "%{_kf5_sharedir}/kwin"
     - "%{_kf5_libdir}/libkdeinit5*.so"
     - "%{_kf5_libdir}/libkdecorations.so.*"
-    - "%{_kf5_libdir}/libkwinxrenderutils.so.*"
-    - "%{_kf5_libdir}/libkwineffects.so.*"
-    - "%{_kf5_libdir}/libkwingl*utils.so.*"
-    - "%{_kf5_libdir}/libkwin4_effect_builtins.so.*"
+    - "%{_kf5_libdir}/libkwin*.so.*"
     - "%{_kf5_plugindir}/*"
     - "%{_kf5_qmldir}/*"
     - "%{_kf5_libdir}/kconf_update_bin/kwin5_update_default_rules"
@@ -112,10 +109,8 @@ SubPackages:
           - "%{_kf5_cmakedir}/KDecorations"
           - "%{_kf5_dbusinterfacesdir}/*.xml"
           - "%{_kf5_libdir}/libkdecorations.so"
-          - "%{_kf5_libdir}/libkwinxrenderutils.so"
-          - "%{_kf5_libdir}/libkwineffects.so"
-          - "%{_kf5_libdir}/libkwingl*utils.so"
-          - "%{_kf5_libdir}/libkwin4_effect_builtins.so"
+          - "%{_kf5_libdir}/libkwin*.so"
+          - "%exclude %{_kf5_libdir}/libkdeinit5*.so"
           - "%{_includedir}/*"
     - Name: doc
       Group: Documentation
